cabal-version: 2.4

name:           prometheus-exporter
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/iij-ii/prometheus-exporter-example#readme>
homepage:       https://github.com/iij-ii/prometheus-exporter-example#readme
bug-reports:    https://github.com/iij-ii/prometheus-exporter-example/issues
author:         IIJ Innovation Institute Inc.
maintainer:     yuji-yamamoto@iij.ad.jp
copyright:      2019 Yuji Yamamoto
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/iij-ii/prometheus-exporter-example.git

-- library
--   exposed-modules:
--       Lib
--   hs-source-dirs:
--       src
--   build-depends:
--       base >=4.7 && <5
--     , prometheus > 2
--   default-language: Haskell2010

executable prometheus-exporter
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , prometheus > 2
  default-language: Haskell2010

-- test-suite prometheus-exporter-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , prometheus-exporter
--   default-language: Haskell2010
